--- a/punchcardToText.html
+++ b/punchcardToText.html
@@ -24,6 +24,6 @@
       <pre id="output" class="output-content"></pre>
     </div>
   </div>
-  <script src="punchCardDeCoder.js"></script>
+  <script src="punchCardDecoder.js"></script>
 </body>
 </html>
