--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="logo-main-container">
     <div class="logo-container">
-      <img src="https://postimage.me/images/2025/05/09/logo.png" alt="logo" id="logo">
+      <img src="https://i.ibb.co/Q3DTbbVN/20250626-092735-removebg-preview.png" alt="logo" id="logo">
     </div>
   </div>
   <div class="btn-container">
